Add syllable-based quacking, animated sprites, cooldowns, and audio fixes
- Duck now quacks once per syllable when responding to player
- Added animated playfield sprites for all interactions (sleeping, eating, playing, cleaning, petting)
- Added interaction cooldowns to prevent XP farming
- Fixed audio balance (quack 100%, music 2.5%)
- Updated close-up art to Kaomoji style
- Added animated level-up celebration (4 frames)
- Fixed syntax errors in ascii_art.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# LLM model files (large, download separately)
+models/*.gguf
+
+# Virtual environment for AI support
+.venv/
+
 # Distribution / packaging
 .Python
 build/
