Add C# port of Cheese the Duck
- .NET 8 solution with 8 projects (Core, Duck, UI, World, Dialogue, Audio, Data, Game)
- Spectre.Console for terminal UI
- NAudio for cross-platform audio
- LLamaSharp for optional LLM integration
- Direct ANSI rendering with buffered output for smooth display
- Core systems: Duck, Needs, Mood, Personality, Weather, Friends, Events, Decorations
- Python save file compatibility via snake_case JSON serialization

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,13 @@ data/*.dat
 # OS
 .DS_Store
 Thumbs.db
+
+# Game logs
+logs/
+
+# C# / .NET build outputs
+StupidDuckCS/**/bin/
+StupidDuckCS/**/obj/
+StupidDuckCS/**/*.user
+StupidDuckCS/**/*.suo
+StupidDuckCS/**/.vs/
