--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 blessed>=1.20.0
+pygame>=2.5.0  # For background music and sound effects
+
 # Optional: Install llama-cpp-python for AI conversations
 # pip install llama-cpp-python
