Major update: Menu fixes, contextual dialogue, building balance, AI improvements
- Fixed menu invisible state bug (menus getting stuck)
- Added arrow key navigation to weather activities menu
- Fixed weather particles overflow for windy weather
- Added contextual dialogue system (duck comments on weather, events, visitors)
- Reduced building material requirements by ~50% and build times by ~35%
- Added building debug submenu (give materials, complete build, etc.)
- Fixed talk mode dismissing response messages
- Enabled bundled TinyLlama AI model by default in requirements
- Built structures and placed items now only show at Home Pond
- Added empty talk input feedback
- Updated README with AI conversation documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 blessed>=1.20.0
 pygame>=2.5.0  # For background music and sound effects
 
-# Optional: Install llama-cpp-python for AI conversations
-# pip install llama-cpp-python
+# AI conversations using bundled local model
+llama-cpp-python>=0.2.0
